--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -15,6 +15,10 @@ license: CC0-1.0
 
 This proposal introduces EIP-1559 and EIP-3198 to Ethereum Classic via a hard fork named **Olympia**. These upgrades enhance EVM compatibility and improve gas pricing mechanics by adopting Ethereum’s EIP-1559 dynamic fee model. Instead of burning the `BASEFEE`, the protocol redirects it to the **Olympia Treasury** (defined in ECIP-1112), a decentralized funding contract governed by **Olympia DAO** (ECIP-1113). This provides Ethereum Classic with a sustainable, non-inflationary funding mechanism for public goods and development, while preserving Proof-of-Work consensus and core principles of immutability and decentralization.
 
+This provides Ethereum Classic with a sustainable, non-inflationary funding mechanism for public goods and development, while preserving Proof-of-Work consensus and core principles of immutability and decentralization.
+
+Until governance is activated, the Treasury accumulates funds passively with no disbursements allowed — ensuring secure, trustless accumulation.
+
 ### Abstract
 
 This ECIP proposes the activation of select Ethereum protocol upgrades on Ethereum Classic under the hard fork name **Olympia**. Specifically, it introduces:
@@ -68,6 +72,8 @@ By adopting these enhancements, Ethereum Classic gains four key benefits:
 
 Together, these changes reinforce Ethereum Classic’s position as a secure, decentralized, and developer-friendly Proof-of-Work smart contract platform.
 
+While EIP-1559 originated on Ethereum, its inclusion here does not violate Ethereum Classic’s principles of immutability or censorship resistance. It is an optional transaction format that improves gas predictability, enables sustainable protocol funding, and aligns incentives — all without changing historical state or requiring trust in centralized actors.
+
 ### Specification
 
 The Olympia upgrade activates the following Ethereum protocol improvements on Ethereum Classic. All specifications are implemented as described in the canonical Ethereum Improvement Proposals (EIPs):
@@ -75,7 +81,8 @@ The Olympia upgrade activates the following Ethereum protocol improvements on Et
 #### Protocol Changes Adopted from Ethereum's London Hard Fork
 
 - [**EIP-1559 – Fee Market Change**](https://eips.ethereum.org/EIPS/eip-1559)  
-  Introduces a new transaction format with a dynamically adjusting `basefee` per block and an optional `priorityFee` (tip) for miners.  
+  Introduces a new transaction format with a dynamically adjusting `basefee` per block and an optional `priorityFee` (tip) for miners ([fee adjustment formula](https://eips.ethereum.org/EIPS/eip-1559#parameters) based on block gas usage).
+
   - On Ethereum Classic, the `basefee` is **not burned**. Instead, it is redirected to the [Olympia Treasury](https://ecips.ethereumclassic.org/ECIPs/ecip-1112), a decentralized, immutable contract for funding network development.
   - Miner tips (`priorityFee`) remain payable to block producers as direct compensation for inclusion.
 
@@ -97,6 +104,10 @@ No additional EVM changes, consensus rules, or opcodes are introduced in this up
 
 Clients and infrastructure providers should test implementation thoroughly using test vectors and inter-client consensus tools to validate behavior across the network.
 
+#### Monetary Policy Consideration
+
+Redirecting the BASEFEE to the Olympia Treasury alters Ethereum's default burn behavior but does not increase ETC’s supply or introduce inflation. Ethereum Classic’s fixed monetary schedule, defined by ECIP-1017, remains fully intact. This change redirects value that would otherwise be burned into a transparent funding mechanism — preserving monetary integrity while enabling sustainable development.
+
 ### Rationale
 
 #### Simplicity by Design
@@ -106,6 +117,7 @@ The Olympia Upgrade introduces **no additional consensus-layer complexity** beyo
 Olympia’s architecture is **modular by intent**:
 - [ECIP-1112](https://ecips.ethereumclassic.org/ECIPs/ecip-1112) (Treasury), [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113) (DAO), and [ECIP-1114](https://ecips.ethereumclassic.org/ECIPs/ecip-1114) (Funding Process) are distinct, independently testable components built atop standard smart contract primitives.
 - Each layer can be activated or upgraded on its own schedule, enabling Ethereum Classic to scale participation and governance **incrementally**, without forcing immediate ecosystem-wide coordination.
+- No new token is introduced or distributed as part of this upgrade.
 
 This approach avoids overengineering while establishing a robust foundation for long-term, community-driven growth.
 
@@ -215,6 +227,8 @@ Implementation of the:
 ...is defined in separate proposals and may proceed **independently**.
 
 This modular structure enables safe, phased deployment of protocol upgrades without dependency on governance infrastructure readiness.
+
+Coordination with client teams, including maintainers of Core-Geth, will be required to ensure timely implementation of the Olympia upgrade. If necessary, third-party contributors or ecosystem developers may be enlisted to complete client-side changes, formalize testnet deployments, and validate consensus behavior. This open coordination model ensures the upgrade remains technically feasible and community-driven.
 
 ### Reference Implementation
 
