--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -13,7 +13,7 @@ license: CC0-1.0
 
 ### Simple Summary
 
-This proposal introduces EIP-1559 and EIP-3198 to Ethereum Classic via a hard fork named **Olympia**. These upgrades enhance EVM compatibility and improve gas pricing mechanics by adopting Ethereum’s EIP-1559 dynamic fee model. Instead of burning the `BASEFEE`, the protocol redirects it to the **Olympia Treasury** (defined in ECIP-1112), a decentralized funding contract governed by **Olympia DAO** (ECIP-1113). This provides Ethereum Classic with a sustainable, non-inflationary funding mechanism for public goods and development, while preserving Proof-of-Work consensus and core principles of immutability and decentralization.
+This proposal introduces EIP-1559 and EIP-3198 to Ethereum Classic via a hard fork named **Olympia**. These upgrades enhance EVM compatibility and improve gas pricing mechanics by adopting Ethereum’s EIP-1559 dynamic fee model. Instead of burning the `BASEFEE`, the protocol redirects it to the **Olympia Treasury** (defined in ECIP-1112), a decentralized funding contract governed by **Olympia DAO** (ECIP-1113).
 
 This provides Ethereum Classic with a sustainable, non-inflationary funding mechanism for public goods and development, while preserving Proof-of-Work consensus and core principles of immutability and decentralization.
 
@@ -147,8 +147,6 @@ Canonical EIPs like 1559 and 3198 are now **expected defaults** across most majo
 
 Upgrading ensures ETC remains standards-aligned and future-proof for both dApp and client developers.
 
----
-
 ### Precedents for BASEFEE Redirection
 
 Although Ethereum Mainnet burns the `BASEFEE` as part of its monetary policy, several production EVM chains have chosen to **redirect base fee revenue to treasury contracts** for sustainable development:
@@ -158,8 +156,6 @@ Although Ethereum Mainnet burns the `BASEFEE` as part of its monetary policy, se
 - **Mantle**, **Polygon CDK**, and other modular L2 stacks implement treasury contracts that receive protocol revenue and route it via governance
 
 These examples demonstrate that **redirecting `BASEFEE` to a treasury** — rather than burning it — is a proven, incentive-aligned design used to fund core protocol work, infrastructure, and public goods.
-
----
 
 By adopting this structure, Ethereum Classic:
 - Converts network usage into a sustainable on-chain revenue stream
@@ -289,8 +285,6 @@ This design ensures backward compatibility while enabling forward upgrades in a 
 
 The Olympia Upgrade introduces no new consensus-critical vulnerabilities beyond the adoption of EIP-1559 and EIP-3198 — both of which are widely deployed and battle-tested across the EVM ecosystem. Security considerations fall into the following key areas:
 
----
-
 #### 1. EIP-1559 and EIP-3198 Safety
 
 - **Production Maturity**:  
@@ -298,8 +292,6 @@ The Olympia Upgrade introduces no new consensus-critical vulnerabilities beyond 
 
 - **Formal Validation**:  
   These features have undergone formal verification, economic analysis, and multi-client consensus testing over several years.
-
----
 
 #### 2. BASEFEE Redirection Logic
 
@@ -311,8 +303,6 @@ The Olympia Upgrade introduces no new consensus-critical vulnerabilities beyond 
 
 - **No EVM Modifications**:  
   The upgrade does not alter the opcode set, gas accounting, or transaction validation logic outside what is defined in EIP-1559 and EIP-3198.
-
----
 
 #### 3. Client Implementation Requirements
 
@@ -328,8 +318,6 @@ The Olympia Upgrade introduces no new consensus-critical vulnerabilities beyond 
 - **Cross-Client Alignment**:  
   All participating clients must apply identical redirect logic to ensure consensus compatibility.
 
----
-
 #### 4. Treasury Isolation and Governance Safety
 
 - **Execution Separation**:  
@@ -340,8 +328,6 @@ The Olympia Upgrade introduces no new consensus-critical vulnerabilities beyond 
 
 - **Custody Guarantees**:  
   No treasury funds can be moved without explicit on-chain governance approval, ensuring strict separation of concerns between consensus logic and DAO execution.
-
----
 
 #### 5. Testnet and Audit Strategy
 
@@ -356,8 +342,6 @@ The Olympia Upgrade introduces no new consensus-critical vulnerabilities beyond 
 
 - **Audit Coordination**:  
   While ECIP-1111 affects protocol logic only, client implementers are encouraged to audit the integration in tandem with ECIP-1112–1114 for full-stack safety assurance.
-
----
 
 #### Summary
 
@@ -376,9 +360,7 @@ The Olympia Upgrade is intentionally limited in scope to EIP-1559 and EIP-3198. 
 
 This roadmap serves as a reference for ongoing community discussion and future upgrade planning.
 
-> 📘 *Note: The EIPs listed below are not included in ECIP-1111. Their adoption would require a new ECIP, community consensus, and successful testnet validation under the ECIP-1000 process.*
-
----
+> Note: The EIPs listed below are not included in ECIP-1111. Their adoption would require a new ECIP, community consensus, and successful testnet validation under the ECIP-1000 process.*
 
 #### ✅ Candidates for Future Inclusion
 
@@ -393,8 +375,6 @@ The following EIPs are technically and philosophically aligned with ETC and may 
 | 2935   | Save Historical Block Hashes in State   | Enables native access to past block hashes for oracles and randomness. Useful for protocol design.    |
 | 7623   | Increase Calldata Cost                  | Disincentivizes calldata abuse; aligns ETC with EIP-4844-style cost structures. Tunable for PoW.      |
 
----
-
 #### ⚠️ Optional or Low Priority
 
 These EIPs offer marginal or situational benefits and do not require urgent action.
@@ -405,8 +385,6 @@ These EIPs offer marginal or situational benefits and do not require urgent acti
 | 3228   | Difficulty Bomb Delay         | Specific to Ethereum’s PoS transition. No impact on ETC.                                  |
 | 7691   | Blob Throughput Increase      | Depends on EIP-4844 (blobs). Not relevant until ETC adopts blob transaction support.      |
 | 7702   | Set EOA Account Code          | Enables future account abstraction; not a current ETC priority.                           |
-
----
 
 #### ❌ Incompatible or Out of Scope (PoS-Specific)
 
