--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -13,313 +13,299 @@ license: CC0-1.0
 
 ### Simple Summary
 
-This proposal redirects the `BASEFEE` introduced by ECIP-1111 (via EIP-1559) from being burned to being deposited into an on-chain, protocol-defined treasury contract known as the **Olympia Treasury**. This mechanism establishes a sustainable and non-inflationary funding stream for Ethereum Classic by capturing fee revenue at the consensus layer. The treasury operates without trusted intermediaries and is designed to transparently fund long-term protocol development, client maintenance, infrastructure, and ecosystem security.
+Redirect the `BASEFEE` introduced by ECIP-1111 (EIP-1559) to a protocol-defined on-chain treasury contract—**the Olympia Treasury**—instead of burning it. This creates a sustainable, non-inflationary funding stream for Ethereum Classic by capturing transaction fee revenue at the consensus layer. The treasury is immutable, transparent, and operates without trusted intermediaries, enabling decentralized support for client development, infrastructure, and long-term ecosystem security.
 
 ### Abstract
 
-This ECIP defines the deployment and integration of the **Olympia Treasury**, a protocol-level smart contract at a fixed address on the Ethereum Classic network. Following the activation of ECIP-1111 (which introduces EIP-1559), all `BASEFEE` revenue will be redirected to this treasury contract instead of being burned.
+This ECIP specifies the deployment of the **Olympia Treasury**, a protocol-level smart contract at a fixed, deterministic address on the Ethereum Classic network. Upon activation of ECIP-1111 (which implements EIP-1559), all `BASEFEE` revenue will be redirected to this contract instead of being burned.
 
-The Olympia Treasury acts as a decentralized, immutable funding vault that accumulates protocol-level fee revenue. It is externally auditable, non-upgradable, and designed for secure interoperability with a permissionless governance layer (defined in ECIP-1113). Fund disbursement is executed via on-chain proposals submitted through Olympia DAO.
+The Olympia Treasury serves as an immutable, externally auditable funding vault for Ethereum Classic. It accumulates protocol-level fee revenue and is designed to interoperate securely with a permissionless governance layer (ECIP-1113). Disbursements are executed exclusively through on-chain proposals approved by Olympia DAO.
 
-This model provides Ethereum Classic with a transparent, sustainable funding mechanism to support core client development, infrastructure, ecosystem tooling, and long-term security—without introducing inflation or relying on centralized intermediaries. The design aligns with established precedents from other EVM-compatible networks such as Ronin, Celo, and Mantle, which similarly redirect basefee revenue into protocol-owned treasuries.
+This treasury mechanism introduces a transparent, non-inflationary funding model to support client maintenance, protocol development, infrastructure, and ecosystem growth—without reliance on trusted intermediaries. The design draws on successful precedents from other EVM-compatible networks, including Ronin, Celo, and Mantle, which similarly redirect basefee revenue into DAO-governed treasuries.
 
 ### Motivation
 
-Ethereum Classic currently lacks a sustainable and decentralized mechanism to fund core protocol development, infrastructure, tooling, and ecosystem growth. Historical funding has relied on short-term grants, centralized donors, or nonprofit foundations — many of which have ceased operations or withdrawn support.
+Ethereum Classic currently lacks a sustainable, transparent, and decentralized mechanism to fund core protocol development, infrastructure, and ecosystem tooling. Historical support has relied on nonprofit foundations, one-time grants, or centralized donors—many of which have discontinued operations or withdrawn funding.
 
-Under ECIP-1017, block rewards are programmed to decline over time. As inflationary funding mechanisms taper off, Ethereum Classic must adopt a new model that is both durable and aligned with its core principles of immutability and Proof-of-Work.
+With block rewards declining over time under ECIP-1017, Ethereum Classic must transition to a funding model that is both durable and consistent with its core values of immutability and Proof-of-Work.
 
-Redirecting the `BASEFEE` introduced by EIP-1559 into the Olympia Treasury establishes a transparent, protocol-native source of funding derived from network usage. This approach:
+Redirecting the `BASEFEE` introduced by EIP-1559 into a protocol-owned treasury—rather than burning it—establishes a native, non-inflationary funding stream tied directly to network usage. This model:
 
 - Aligns incentives between miners, users, and developers.
-- Reinforces the long-term security and maintenance budget.
-- Creates a sustainable public goods funding pathway without introducing inflation or centralization risks.
+- Strengthens Ethereum Classic’s long-term security and maintenance budget.
+- Enables a sustainable, on-chain mechanism for funding public goods—without introducing monetary inflation or trusted third parties.
 
-By capturing endogenous protocol revenue and directing it into a decentralized treasury, Ethereum Classic gains the financial tooling necessary to support long-term viability and ecosystem resilience.
+By capturing endogenous protocol revenue and routing it into an immutable, decentralized treasury, Ethereum Classic secures the financial infrastructure needed to support client development, ecosystem resilience, and long-term viability.
 
 ### Specification
 
-#### Contract Address
+#### Treasury Address
 
-The Olympia Treasury contract SHALL be deployed at a fixed, deterministic address. This address SHALL be hardcoded into Ethereum Classic's consensus rules as the recipient of the `BASEFEE` defined in ECIP-1111.
+The Olympia Treasury contract SHALL be deployed at a fixed, deterministic address. This address SHALL be hardcoded into Ethereum Classic's consensus logic as the recipient of the `BASEFEE` defined in ECIP-1111.
 
 - **Placeholder Address**: `0x0000000000000000000000000000000000OLYMPIA`  
   _(Final address to be derived via `CREATE` or `CREATE2` and published prior to testnet deployment in coordination with client implementers.)_
 
-The address derivation MUST be reproducible across all client implementations to ensure deterministic deployment and cross-client consensus.
+The address derivation MUST be reproducible across all client implementations to ensure deterministic deployment and cross-client consensus integrity.
 
-#### Funding Source
+#### Fee Redirection and Consensus Enforcement
 
-- **Fee Redirection**: 100% of the `BASEFEE` collected from EIP-1559 transactions SHALL be redirected to the Olympia Treasury contract.
-- **Consensus Enforcement**: This redirection SHALL be enforced at the consensus layer starting from the activation block of ECIP-1111.
+- **Funding Source**: 100% of the `BASEFEE` from all EIP-1559 transactions SHALL be redirected to the Olympia Treasury.
+- **Enforcement**: This behavior SHALL be enforced at the consensus layer upon activation of ECIP-1111. Clients that fail to implement this redirection SHALL fork from the canonical chain.
 
-#### Contract Properties
+#### Contract Requirements
 
-The Olympia Treasury contract MUST satisfy the following technical constraints:
+The Olympia Treasury contract MUST meet the following technical constraints:
 
-- Immutable deployment: No proxy patterns, upgrade hooks, or owner-controlled logic.
-- No `selfdestruct` or `delegatecall` functionality.
-- Standard logging: MUST emit `Transfer`, `Receive`, and `ProposalExecuted` events for full traceability.
-- Full read transparency: Publicly accessible `view` methods for balance and transaction history.
-- Withdrawal restrictions: EOAs MUST be prevented from directly initiating withdrawals.
+- **Immutability**:  
+  - No proxy pattern, upgrade hooks, `selfdestruct`, or `delegatecall`.
+  - No admin or owner-controlled logic.
+- **Traceability**:  
+  - Emits `Transfer`, `Receive`, and `ProposalExecuted` events for auditability.
+- **Transparency**:  
+  - Public `view` methods for accessing balance and transaction metadata.
+- **Access Control**:  
+  - Reverts all direct withdrawal attempts from EOAs or unauthorized contracts.
 
-#### Governance Interface
+#### Governance Integration
 
-The Treasury SHALL expose an interface callable exclusively by a designated governance contract (see ECIP-1113). This interface MUST support:
+The Treasury contract SHALL expose a restricted interface callable only by a designated DAO executor contract (see ECIP-1113). This interface MUST include:
 
-- **Permissionless proposal intake** via governance-layer logic.
-- **Authorized disbursement execution** via `release()` or `execute()` methods.
-- **Flexible workflows**, such as milestone-based funding or time-locked transfers.
-- **On-chain auditability** through event logging of all governance-initiated actions.
+- `release()` and/or `execute()` disbursement functions, callable only by the authorized executor.
+- On-chain event logging for every executed proposal.
+- Stateless logic enabling milestone-based or time-locked funding (controlled by external governance, not the Treasury itself).
 
-> Governance logic SHALL reside entirely outside the Treasury contract to maintain modularity and minimize attack surface.
+> No governance logic (e.g., proposals, voting) SHALL exist within the Treasury contract. All governance functions SHALL reside externally to ensure modularity and minimize attack surface.
 
-#### Execution Control and Anti-Spam Protections
+#### Execution Control and Spam Mitigation
 
-The Treasury contract MUST enforce strict access controls to mitigate unauthorized usage:
+- **DAO-Only Execution**: Only the authorized governance executor MAY invoke disbursement functions.
+- **Proposal Isolation**: Proposals MUST be validated externally; the Treasury SHALL enforce execution-only logic.
+- **Spam Protection**: Proposal throughput SHALL be rate-limited by governance mechanisms, not enforced within the Treasury contract.
 
-- **DAO-Only Execution**: Only the authorized DAO executor MAY invoke fund release functions. Unauthorized calls MUST revert.
-- **Governance-Free Core**: The Treasury SHALL contain no embedded proposal or voting logic.
-- **External Rate Limiting**: Proposal throughput MUST be rate-limited at the governance layer, reducing spam and denial-of-service risk.
-
-These measures ensure the Olympia Treasury functions as a secure, auditable, and governance-controlled vault, while maintaining protocol-layer enforcement of fee redirection.
+These constraints ensure the Olympia Treasury operates as a minimal, secure, and externally governed protocol vault—compliant with ECIP-1111 and prepared for governance activation under ECIP-1113.
 
 ### Rationale
 
-#### Minimalist Architecture for Network Maturity
+#### Minimalist Architecture for Secure Deployment
 
-The Olympia Treasury is deployed as a **simple, immutable vault**, free of internal governance or complex execution logic. Until governance is activated through ECIP-1113, it passively accumulates funds with **no risk of misuse or mismanagement**.
+The Olympia Treasury is deployed as a **minimal, immutable vault**, without embedded governance or conditional logic. Prior to DAO activation (as defined in ECIP-1113), the contract functions solely as a passive accumulator of `BASEFEE` revenue.
 
-This architecture ensures:
-- **Zero operational complexity** during early deployment phases  
-- **No risk of unauthorized access or fund leakage**  
-- **A stable foundation** for phased governance activation without imposing time pressure
+This design ensures:
+- **No operational complexity** at launch  
+- **No upgrade paths or privileged access**  
+- **A stable foundation** for phased governance activation  
 
-Treasury functionality is intentionally minimized. All complexity — including proposal logic, vote execution, and disbursement conditions — is deferred to the external DAO layer, which can evolve independently and at the community’s pace.
+By minimizing internal logic, the Treasury eliminates execution risks during the accumulation phase and supports safe, modular rollout of future governance components.
 
-#### Strategic Justifications
+#### Design Objectives
 
-The Olympia Treasury contract is foundational to Ethereum Classic’s transition toward sustainable, decentralized funding. Its design supports the following strategic objectives:
+The Treasury contract is a cornerstone of Ethereum Classic’s transition to sustainable, decentralized funding. It supports the following protocol-level goals:
 
-- **Long-Term Security Budget**  
-  As block rewards decrease under ECIP-1017, Ethereum Classic requires a durable, non-inflationary funding source. Redirecting the `BASEFEE` ensures the network retains native resources to support core development, infrastructure, audits, and upgrades — without relying on external donors.
+- **Security Budget Continuity**  
+  ECIP-1017 reduces block rewards over time. Treasury funding via `BASEFEE` redirection ensures ETC retains a native, non-inflationary source of capital for audits, client maintenance, and protocol upgrades.
 
-- **Economic Incentive Alignment**  
-  Linking funding to on-chain activity creates a positive feedback loop:
-  > More dApps and users → More transactions → More treasury revenue → More development → More adoption.
+- **Aligned Economic Incentives**  
+  The design creates a virtuous cycle:  
+  > More users and dApps → More transactions → More treasury revenue → More development → More adoption.
 
-- **Permissionless and Merit-Based Access**  
-  In contrast to closed foundations or opaque grant committees, the Olympia Treasury enables any qualified contributor to request funding through transparent, on-chain governance.
+- **Open and Permissionless Access**  
+  Unlike closed foundations or opaque grant programs, the Treasury enables **any contributor** to submit a proposal through transparent, on-chain governance (ECIP-1113).
 
-- **Full Transparency and Accountability**  
-  All inflows, proposals, votes, and disbursements are recorded on-chain. This eliminates ambiguity, mitigates favoritism, and builds long-term trust in how protocol revenue is managed.
+- **Transparency and Accountability**  
+  All inflows and disbursements are recorded on-chain. This removes ambiguity, deters favoritism, and builds long-term community trust in treasury stewardship.
 
-- **Governance Modularity and Upgradeability**  
-  By separating treasury logic from governance execution, Ethereum Classic gains flexibility to upgrade or replace the DAO (ECIP-1113) without altering the treasury itself. This decoupling reduces protocol risk and ensures continuity even if governance systems evolve or are replaced.
+- **Governance Modularity**  
+  Governance logic resides outside the Treasury contract. This allows upgrades or replacements of the DAO (ECIP-1113) without modifying the Treasury, improving resilience and long-term flexibility.
 
 #### Ecosystem Precedents
 
-The basefee redirection model adopted by Olympia has been validated across several EVM-compatible networks:
+Other EVM-based networks have adopted similar basefee redirection models to fund public goods:
 
 - **Ronin Network**  
-  Redirects EIP-1559 `BASEFEE` to a DAO-governed treasury to fund Axie Infinity infrastructure.
+  Routes EIP-1559 `BASEFEE` to a DAO-controlled treasury supporting Axie Infinity infrastructure.
 
-- **Celo (L1)**  
-  Directs gas fees to a carbon offset and community treasury via a Gas Fee Handler.
+- **Celo (Layer 1)**  
+  Redirects gas fees to a Gas Fee Handler for climate and community funding.
 
-- **Mantle (L2)**  
-  Uses sequencer fee redirection to fund ecosystem grants via MantleDAO.
+- **Mantle (Layer 2)**  
+  Uses sequencer revenue redirection to support ecosystem grants via MantleDAO.
 
-These examples demonstrate that redirecting basefee revenue into protocol-owned treasuries is a practical and scalable mechanism for sustainable development funding.
+These precedents show that **protocol-native treasury funding** is a practical, scalable strategy for sustaining decentralized ecosystems.
 
 #### Summary
 
-The Olympia Treasury embodies Ethereum Classic’s core values — decentralization, transparency, immutability — while introducing a credible, on-chain funding pathway compatible with Proof-of-Work. Its minimalist, modular architecture ensures resilience, upgradeability, and community control over the protocol’s financial future.
+The Olympia Treasury advances Ethereum Classic’s core values of **immutability**, **decentralization**, and **transparency**, while introducing a secure and credible method of funding long-term development. Its separation from governance logic ensures safety during deployment and flexibility for future upgrades.
 
 ### Related Work
 
-The Olympia Treasury design draws inspiration from other EVM-compatible networks that have implemented protocol-level fee redirection to fund public goods and support DAO-managed treasuries. These implementations demonstrate the practical viability of using basefee or gas revenue as a sustainable, decentralized funding mechanism.
+The Olympia Treasury design builds on proven patterns from other EVM-compatible networks that use protocol-level fee redirection to fund public goods through DAO-managed treasuries. These implementations demonstrate the viability of using `BASEFEE` or gas-derived revenue to support sustainable, decentralized development.
 
 - **Ronin Network (Axie Infinity sidechain)**  
-  Redirects EIP-1559 `BASEFEE` to a DAO-governed treasury.  
+  Redirects EIP-1559 `BASEFEE` into a DAO-controlled treasury. Funds are used to support infrastructure, community grants, and long-term protocol maintenance.  
   [View Contract](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217)
 
 - **Celo (Layer 1)**  
-  Redirects gas fees to a Gas Fee Handler, which allocates funds to carbon offsetting and community initiatives.  
+  Uses a `Gas Fee Handler` to redirect transaction fees toward climate initiatives and community development via a governance-controlled treasury.  
   [View Handler](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438)
 
 - **Mantle (Layer 2)**  
-  Implements modular fee redirection from sequencer revenue to a treasury governed by MantleDAO.  
+  Implements fee redirection from its L2 sequencer to a treasury contract managed by MantleDAO. Revenue supports grants, infrastructure, and developer programs.  
   [Read More](https://docs.mantle.xyz/network/mantle-tokenomics/treasury-flow)
 
 - **Polygon CDK (Modular Rollup Framework)**  
-  Supports EIP-1559 and modular DAO-managed treasuries for sovereign rollups.  
+  Supports modular DAOs and EIP-1559-compatible treasury redirection in sovereign rollups, allowing rollup creators to govern and fund protocol upgrades.  
   [Polygon CDK Overview](https://polygon.technology/blog/polygon-cdk-announces-native-support-for-eip-4844-and-modular-daos)
 
 - **OP Stack (used by Base, Optimism)**  
-  Implements EIP-1559 and supports custom sequencer fee splitting. Unlike other examples, it does **not** currently redirect `BASEFEE` to a DAO treasury — providing a useful contrast to full redirection models.
+  Supports EIP-1559-style transactions and sequencer revenue splitting. However, `BASEFEE` is not currently redirected to a DAO treasury — providing a useful counterexample and design contrast.
 
-These examples illustrate a growing consensus among EVM-based networks: basefee redirection is a scalable and effective approach to fund ecosystem growth while maintaining protocol neutrality and decentralization.
+These implementations reflect a broader trend: **redirecting protocol revenue to transparent, on-chain treasuries is an effective, neutral, and incentive-aligned strategy** for funding ecosystem development without introducing inflation or centralized control.
 
 ### Implementation
 
-The Olympia Treasury will be implemented in the [Core-Geth](https://github.com/ethereumclassic/core-geth) client as part of the Olympia network upgrade. This integration includes protocol-level changes to redirect `BASEFEE` revenues to a fixed treasury address defined in ECIP-1112.
+The Olympia Treasury will be implemented in the [Core-Geth](https://github.com/ethereumclassic/core-geth) client as part of the Olympia network upgrade. This includes consensus-level changes to redirect `BASEFEE` revenue to a fixed treasury address defined in ECIP-1112.
 
 #### Client Responsibilities
 
-Client implementations MUST include the following changes:
+Ethereum Classic client implementations MUST include the following protocol changes:
 
 - **Consensus Enforcement**:  
-  Hardcode the Olympia Treasury address in the consensus layer as the sole recipient of the `BASEFEE` from each block.
+  The Olympia Treasury address MUST be hardcoded at the consensus layer as the canonical recipient of the `BASEFEE` in every post-upgrade block.
 
-- **Redirection Logic**:  
-  Replace the default burn behavior of EIP-1559 with a transfer of the `BASEFEE` to the treasury contract.
+- **Fee Redirection Logic**:  
+  The default EIP-1559 burn behavior MUST be replaced with logic that transfers the `BASEFEE` to the Treasury contract.
 
-- **Gas Accounting Integrity**:  
-  Update all gas accounting and transaction validation logic to reflect the redirection, ensuring compatibility with EIP-1559 mechanics.
+- **Gas Accounting Adjustments**:  
+  Clients MUST adjust block reward, gas usage, and fee distribution calculations to account for the redirection and maintain compatibility with EIP-1559 mechanics.
 
 #### Deployment Artifacts
 
-- The treasury contract’s **bytecode**, **deployment method**, and **deterministic address** will be published with the Olympia upgrade release.
-- Deployment will use `CREATE` or `CREATE2`, allowing reproducibility across clients.
-- The contract will undergo formal security auditing prior to mainnet deployment.
+- The Treasury contract’s **bytecode**, **deployment method**, and **deterministic address** SHALL be published with the Olympia upgrade release.  
+- Deployment MUST use either `CREATE` or `CREATE2` to ensure reproducibility across clients and enable deterministic address derivation.  
+- The finalized contract SHALL undergo formal security auditing prior to mainnet deployment.
 
 #### Test Coverage and Validation
 
-Comprehensive test cases will be provided to verify correct functionality, including:
+Clients MUST validate the following behaviors through integration testing and Mordor Testnet deployment:
 
-- Accurate `BASEFEE` transfer to the treasury address in every block.
-- Emission of expected `Transfer` and governance-related events.
-- Compatibility with governance interfaces (`propose()`, `release()`, `execute()`).
-- Full Mordor Testnet simulation for consensus consistency and replay validation.
+- Accurate and consistent `BASEFEE` transfers to the treasury in every block.
+- Correct emission of all required events, including `Transfer`, `Receive`, and governance-related logs.
+- Compatibility with DAO governance interfaces (`propose()`, `release()`, `execute()`).
+- Consensus alignment across client implementations using cross-client test vectors and replay validation.
 
-These implementation steps ensure the Olympia Treasury is securely embedded into Ethereum Classic’s base protocol, with verifiable behavior across client software and network participants.
+These requirements ensure secure, deterministic integration of the Olympia Treasury across the Ethereum Classic network and client stack.
 
 ### Modular Treasury Deployment
 
-The Olympia Treasury is designed as a standalone, immutable smart contract that can be deployed and activated independently of the DAO governance system (ECIP-1113) or legal execution interface (ECIP-1114). Its architecture enables phased deployment and reduces coordination complexity.
+The Olympia Treasury is implemented as a standalone, immutable smart contract. It may be deployed and activated independently of downstream governance (ECIP-1113) or legal execution infrastructure (ECIP-1114), enabling a phased rollout of the Olympia Upgrade.
 
 #### Pre-Governance Activation
 
-- Upon deployment, the Treasury contract can **begin accumulating `BASEFEE` revenue** immediately following activation of ECIP-1111.
-- It does **not require active governance contracts** or execution interfaces to function as a passive vault.
+- The Treasury contract SHALL begin accumulating `BASEFEE` revenue immediately upon activation of ECIP-1111.
+- No governance contracts or DAO infrastructure are required for the Treasury to function as a passive accumulation vault.
 
 #### Security During Accumulation Phase
 
-- All disbursement functions (`release()`, `execute()`) are **inaccessible** until triggered by the authorized DAO executor.
-- Any withdrawal attempts from EOAs or unauthorized contracts will be **automatically rejected**, ensuring fund immutability during the interim period.
+- All disbursement functions (e.g., `release()`, `execute()`) SHALL remain inaccessible unless triggered by an authorized governance executor.
+- Any withdrawal attempts from EOAs or unauthorized contracts MUST revert, ensuring funds remain locked until formal governance activation.
 
 #### Deployment Advantages
 
 - **Forward Compatibility**:  
-  The treasury is ready to integrate with governance modules once finalized, without requiring changes to the contract itself.
+  Governance modules may be integrated at a later time without requiring modifications to the deployed Treasury contract.
 
 - **Security Isolation**:  
-  The decoupled deployment isolates treasury logic from governance logic, minimizing risk exposure during early adoption stages.
+  Treasury logic is fully decoupled from governance execution, minimizing surface area and isolating risk during early stages.
 
 - **Phased Rollout Support**:  
-  This modular structure supports a staggered implementation of ECIPs 1111–1114, giving the community time to test, audit, and activate governance systems without delaying treasury accumulation.
+  This structure supports staggered deployment of ECIPs 1111–1114, allowing the community to independently audit and activate each component while permitting early accumulation of funds.
 
-This modular approach reflects best practices in protocol design — enabling early utility, minimizing upgrade risk, and maintaining flexibility for future governance integration.
+This modular deployment pattern enables secure, flexible treasury activation while reducing the need for full-stack coordination at launch.
 
 ### Backwards Compatibility
 
-The Olympia Treasury contract modifies the default behavior introduced by EIP-1559 by redirecting the `BASEFEE` to a fixed treasury address instead of burning it. This change is enforced at the protocol level and requires client-side implementation as part of the Olympia upgrade (ECIP-1111).
+The Olympia Treasury contract modifies the default behavior introduced by EIP-1559 by redirecting the `BASEFEE` to a fixed treasury address instead of burning it. This modification is enforced at the consensus level and requires updated client implementations under ECIP-1111.
 
-#### Impact on Nodes
+#### Node Behavior
 
 - **Upgraded Clients**:  
-  Nodes that upgrade will recognize the Treasury contract and process the `BASEFEE` redirect correctly.
+  Clients that implement ECIP-1111 and ECIP-1112 will correctly process Type-2 transactions and redirect `BASEFEE` to the hardcoded treasury address.
 
-- **Legacy Clients**:  
-  Nodes that do not upgrade will remain unaware of:
-  - Type-2 transactions introduced by EIP-1559  
-  - The Treasury contract address hardcoded into consensus  
-  This results in a **permanent consensus fork** from the canonical Ethereum Classic chain.
+- **Non-Upgraded Clients**:  
+  Legacy clients that do not implement ECIP-1111 will:
+  - Fail to recognize Type-2 transactions (EIP-1559)
+  - Continue to burn the `BASEFEE` or handle it incorrectly
+  - Remain unaware of the Treasury contract address
 
-#### Compatibility with Legacy Contracts
+  As a result, such clients will diverge at the fork block, causing a **permanent consensus split** from the canonical Ethereum Classic chain.
 
-- The redirect does **not affect Type-0 transactions** or existing contracts that do not interact with fee logic.
-- All previously deployed smart contracts will continue to execute normally.
-- The system remains fully **forward-compatible** with existing dApps, tools, and transaction formats that are EIP-1559-agnostic.
+#### Contract and Tooling Compatibility
 
-This approach preserves historical behavior for legacy participants while introducing modern features in a strictly opt-in, upgrade-controlled manner.
+- Type-0 transactions remain valid and are unaffected by this upgrade.
+- Previously deployed contracts that do not reference the `BASEFEE` or Treasury address will continue to operate as before.
+- Tooling and dApps that are EIP-1559-agnostic remain fully functional, ensuring **forward compatibility** for existing integrations.
+
+This upgrade preserves backward compatibility for legacy transactions while enabling forward enhancements in a fully opt-in, consensus-driven manner.
 
 ### Security Considerations
 
-The Olympia Treasury contract is engineered with strict safeguards to uphold immutability, enforce access control, and preserve consensus integrity. Security guarantees are structured across five key domains:
-
----
+The Olympia Treasury contract introduces consensus-layer logic to redirect the `BASEFEE` and enforces immutability through strict smart contract constraints. Security risks are mitigated across the following five domains:
 
 #### 1. Contract Immutability and Access Control
 
 - **Immutable Deployment**:  
-  The contract is deployed with no upgrade path — it uses fixed bytecode, no proxy pattern, no `delegatecall`, and no administrative modifiers.  
-  No party, including the DAO, can alter its logic post-deployment.
+  The contract is deployed once and cannot be upgraded. It includes no proxy mechanisms, no `delegatecall`, and no owner or administrative controls.
 
 - **Restricted Execution**:  
-  Only the authorized DAO executor contract may invoke `release()` or `execute()` functions.  
-  All calls from EOAs or unauthorized contracts will revert by design.
+  Only an authorized DAO executor contract may call disbursement functions (`release()`, `execute()`).  
+  All direct calls from externally owned accounts (EOAs) or unauthorized contracts SHALL revert.
 
-- **Minimal Surface Area**:  
-  The contract implements only essential permission checks and fund transfers.  
-  Its simplicity minimizes exploitable logic and reduces attack vectors.
+- **Minimal Attack Surface**:  
+  The contract implements minimal logic beyond permission enforcement and fund transfers, reducing the likelihood of exploitable vulnerabilities.
 
----
+#### 2. DAO Governance and Integration Risks
 
-#### 2. DAO Integration and Governance Risks
+- **Governance Risks Are Out-of-Scope**:  
+  This ECIP does not define DAO governance behavior. Risks such as spam proposals, collusion, or low-quorum attacks are addressed in ECIP-1113.
 
-- **Governance Failures (Out-of-Scope)**:  
-  Risks such as proposal spam, vote manipulation, or collusion reside at the DAO layer (see ECIP-1113).  
-  Expected mitigations include:
-  - Time delays for proposal review  
-  - Multisig proposal guards  
-  - Quorum-based on-chain voting with transparency
+- **Fail-Safe Treasury Design**:  
+  Even in cases of DAO failure or capture, funds remain inaccessible unless a proposal is executed by the authorized interface.  
+  This constraint ensures separation of concerns between protocol security and governance dynamics.
 
-- **Treasury Hardening Against DAO Capture**:  
-  Even in the event of DAO compromise, funds remain locked unless a valid, quorum-approved proposal is executed through the DAO’s authorized interface.
+#### 3. Client Enforcement and Network Safety
 
----
-
-#### 3. Client Enforcement and Consensus Safety
-
-- **Mandatory Consensus Enforcement**:  
-  Clients MUST enforce protocol-level redirection of `BASEFEE` to the treasury.  
-  Any deviation results in a permanent fork from the canonical Ethereum Classic chain.
+- **Consensus Enforcement**:  
+  Clients MUST redirect `BASEFEE` to the hardcoded treasury address.  
+  Failure to do so results in consensus failure and permanent chain divergence.
 
 - **Replay Protection**:  
-  As with all network upgrades, transaction replay protection is required to prevent cross-fork leakage and execution ambiguity.
-
----
+  Clients SHOULD implement transaction replay protection at the chain ID level to prevent cross-fork execution.
 
 #### 4. Replay Safety and Execution Integrity
 
-- **Chain-Specific Verification**:  
-  Disbursement payloads MUST include `chain ID` and a proposal-specific hash.  
-  This ensures execution is confined to the intended chain and governance action.
+- **Chain-Bound Execution**:  
+  Governance proposals MUST include a `chain ID` and unique identifier hash to ensure binding disbursement execution on the correct chain.
 
-- **Proposal Binding**:  
-  Treasury disbursements are strictly bound to successful proposals.  
-  Without a valid, DAO-initiated trigger, execution attempts are rejected.
-
----
+- **Proposal-Linked Disbursement**:  
+  No funds may be released without a valid, approved, and hash-bound governance proposal.
 
 #### 5. Audit and Testing Strategy
 
-- **Independent Security Audits**:  
-  The Treasury contract will undergo formal audits by third-party security firms, independent of DAO contracts.
+- **Independent Security Audit**:  
+  The contract SHALL be audited by external security firms prior to deployment.
 
 - **Formal Verification**:  
-  Static analysis tools (e.g., Slither, MythX) will be used to validate logic soundness and detect vulnerabilities.
+  Automated tools such as Slither or MythX SHALL be used to statically analyze the contract for vulnerabilities and logic errors.
 
-- **Comprehensive Testnet Validation**:  
-  Full functionality — including basefee redirection and governance-triggered disbursement — will be tested on the Mordor Testnet prior to mainnet activation.
+- **Testnet Simulation**:  
+  Mordor Testnet SHALL be used to validate basefee redirection, governance integration, and disbursement mechanics prior to mainnet activation.
 
 ---
 
 #### Summary
 
-The Olympia Treasury is intentionally minimal, immutable, and governance-isolated. Its hardened access model, enforced consensus logic, and transparent audit trail protect against both technical exploits and governance capture. Through rigorous audits, replay protection, and modular design, the contract provides a robust foundation for sustainable on-chain funding on Ethereum Classic.
+The Olympia Treasury is implemented as an immutable, governance-isolated vault. Its design prevents unauthorized access, minimizes runtime complexity, and enforces consensus correctness. Through external audits, formal verification, and testnet validation, the implementation provides a secure foundation for decentralized, on-chain funding of Ethereum Classic public goods.
 
 ### Copyright
 
