ECIP-1111 Second Draft Review
+ Clarity

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -15,7 +15,7 @@ license: CC0-1.0
 
 This proposal introduces EIP-1559 and EIP-3198 to Ethereum Classic via a hard fork named **Olympia**. These upgrades enhance EVM compatibility and improve gas pricing mechanics by adopting Ethereum’s EIP-1559 dynamic fee model. Instead of burning the `BASEFEE`, the protocol redirects it to the **Olympia Treasury** (defined in ECIP-1112), a decentralized funding contract governed by **Olympia DAO** (ECIP-1113).
 
-This provides Ethereum Classic with a sustainable, non-inflationary funding mechanism for public goods and development, while preserving Proof-of-Work consensus and core principles of immutability and decentralization.
+This enables Ethereum Classic to establish a protocol-level funding mechanism that is sustainable and non-inflationary. All `BASEFEE` revenue is redirected to a decentralized on-chain treasury, preserving Proof-of-Work consensus and the core principles of immutability and decentralization.
 
 Until governance is activated, the Treasury accumulates funds passively with no disbursements allowed — ensuring secure, trustless accumulation.
 
@@ -28,7 +28,7 @@ This ECIP proposes the activation of select Ethereum protocol upgrades on Ethere
 
 These changes improve interoperability with Ethereum and other EVM-based networks, while preserving Ethereum Classic’s Proof-of-Work consensus and principles of immutability.
 
-All `BASEFEE` revenue is redirected to the **Olympia Treasury** (ECIP-1112), a protocol-owned smart contract governed on-chain by **Olympia DAO** (ECIP-1113) and funded through the **Ethereum Classic Funding Proposal (ECFP)** process (ECIP-1114). Off-chain execution, legal compliance, and fiat interfacing are facilitated by the **Ethereum Classic DAO LLC**, a Wyoming-registered entity which operates under instructions from Olympia DAO.
+All `BASEFEE` revenue is redirected to the **Olympia Treasury** (ECIP-1112), an immutable smart contract governed by on-chain proposals submitted through **Olympia DAO** (ECIP-1113). Proposal execution and fiat interfacing are supported by the **Ethereum Classic DAO LLC**, a Wyoming-registered legal wrapper that performs administrative actions under binding instructions from on-chain governance, without discretionary control.
 
 
 This upgrade explicitly excludes changes related to Ethereum’s Proof-of-Stake transition, including validator operations and beacon-chain-based randomness, which are not applicable to Ethereum Classic. Implementation requires coordinated deployment across client software and node operators, with block heights to be finalized for both **Mordor Testnet** and **Mainnet** activation.
@@ -68,7 +68,7 @@ By adopting these enhancements, Ethereum Classic gains four key benefits:
    Aligning with the EVM upgrade roadmap positions Ethereum Classic as a viable, Proof-of-Work alternative to Ethereum for developers, tooling providers, and infrastructure operators. Compatibility attracts broader adoption and ecosystem support.
 
 4. **Sustainable Protocol Funding**  
-   Redirecting the `BASEFEE` to the [Olympia Treasury](https://ecips.ethereumclassic.org/ECIPs/ecip-1112) establishes a permanent, non-inflationary funding mechanism for Ethereum Classic development. This supports long-term client maintenance, infrastructure, and security as block rewards decline under [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017). It replaces reliance on centralized grants or off-chain foundations with a transparent, on-chain system governed by Olympia DAO.
+   Redirecting the `BASEFEE` to the [Olympia Treasury](https://ecips.ethereumclassic.org/ECIPs/ecip-1112) establishes a transparent, non-inflationary mechanism for protocol-level funding, aligned with ECIP-1017's fixed monetary schedule. This approach eliminates reliance on centralized entities or inflationary subsidies. This supports long-term client maintenance, infrastructure, and security as block rewards decline under [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017). It replaces reliance on centralized grants or off-chain foundations with a transparent, on-chain system governed by Olympia DAO.
 
 Together, these changes reinforce Ethereum Classic’s position as a secure, decentralized, and developer-friendly Proof-of-Work smart contract platform.
 
@@ -102,11 +102,11 @@ No additional EVM changes, consensus rules, or opcodes are introduced in this up
 - Reference vectors from Ethereum Mainnet must be adjusted to reflect treasury accumulation for block-level fee accounting.
 - A coordinated network upgrade at predefined block heights will activate these changes on both Mordor Testnet and Ethereum Classic Mainnet (see Activation section).
 
-Clients and infrastructure providers should test implementation thoroughly using test vectors and inter-client consensus tools to validate behavior across the network.
+Clients and infrastructure providers MUST validate implementation using test vectors and cross-client consensus tools prior to activation. Testing MUST include BASEFEE accounting, transaction type behavior, and treasury accumulation consistency.
 
 #### Monetary Policy Consideration
 
-Redirecting the BASEFEE to the Olympia Treasury alters Ethereum's default burn behavior but does not increase ETC’s supply or introduce inflation. Ethereum Classic’s fixed monetary schedule, defined by ECIP-1017, remains fully intact. This change redirects value that would otherwise be burned into a transparent funding mechanism — preserving monetary integrity while enabling sustainable development.
+Redirecting the BASEFEE to the Olympia Treasury replaces Ethereum's burn mechanism with treasury accumulation, without altering ETC’s total supply or issuance schedule. Monetary policy defined in ECIP-1017 remains fully intact. This change redirects value that would otherwise be burned into a transparent funding mechanism — preserving monetary integrity while enabling sustainable development.
 
 ### Rationale
 
@@ -146,23 +146,6 @@ Canonical EIPs like 1559 and 3198 are now **expected defaults** across most majo
 - Without this support, Ethereum Classic risks incompatibility with upstream tooling, reducing developer adoption.
 
 Upgrading ensures ETC remains standards-aligned and future-proof for both dApp and client developers.
-
-### Precedents for BASEFEE Redirection
-
-Although Ethereum Mainnet burns the `BASEFEE` as part of its monetary policy, several production EVM chains have chosen to **redirect base fee revenue to treasury contracts** for sustainable development:
-
-- **Ronin Network** (Axie Infinity) sends `BASEFEE` to a DAO-governed [Ronin Treasury](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217)
-- **Celo** redirects base fees to a DAO-controlled [Gas Fee Handler](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438)
-- **Mantle**, **Polygon CDK**, and other modular L2 stacks implement treasury contracts that receive protocol revenue and route it via governance
-
-These examples demonstrate that **redirecting `BASEFEE` to a treasury** — rather than burning it — is a proven, incentive-aligned design used to fund core protocol work, infrastructure, and public goods.
-
-By adopting this structure, Ethereum Classic:
-- Converts network usage into a sustainable on-chain revenue stream
-- Funds long-term security and development without inflation
-- Aligns ETC with the broader trend toward **DAO-governed, treasury-enabled ecosystems**
-
-This model preserves ETC’s independence while securing its future.
 
 ### Modular Activation
 
@@ -262,6 +245,25 @@ All other Ethereum Foundation EIPs — spanning from **Tangerine Whistle (2016)*
 
 This selective approach ensures Ethereum Classic remains compatible with the broader EVM ecosystem while preserving its core principles of **immutability**, **Proof-of-Work**, and **backward compatibility**.
 
+### Related Work
+
+#### Precedents for BASEFEE Redirection
+
+Although Ethereum Mainnet burns the `BASEFEE` as part of its monetary policy, several production EVM chains have chosen to **redirect base fee revenue to treasury contracts** for sustainable development:
+
+- **Ronin Network** (Axie Infinity) sends `BASEFEE` to a DAO-governed [Ronin Treasury](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217)
+- **Celo** redirects base fees to a DAO-controlled [Gas Fee Handler](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438)
+- **Mantle**, **Polygon CDK**, and other modular L2 stacks implement treasury contracts that receive protocol revenue and route it via governance
+
+These examples demonstrate that **redirecting `BASEFEE` to a treasury** — rather than burning it — is a proven, incentive-aligned design used to fund core protocol work, infrastructure, and public goods.
+
+By adopting this structure, Ethereum Classic:
+- Converts network usage into a sustainable on-chain revenue stream
+- Funds long-term security and development without inflation
+- Aligns ETC with the broader trend toward **DAO-governed, treasury-enabled ecosystems**
+
+This model preserves ETC’s independence while securing its future.
+
 ### Backwards Compatibility
 
 The Olympia upgrade introduces:
@@ -299,7 +301,7 @@ The Olympia Upgrade introduces no new consensus-critical vulnerabilities beyond 
   The only difference from Ethereum’s EIP-1559 is the redirection of `BASEFEE` to a treasury contract instead of burning it.
 
 - **Hardcoded Behavior**:  
-  This redirection is enforced at the consensus layer. It cannot be bypassed, rerouted, or intercepted by external actors.
+  This redirection is enforced at the consensus layer and hardcoded into client logic. BASEFEE funds are automatically transferred to the treasury contract at the protocol level, ensuring tamper-proof accumulation.
 
 - **No EVM Modifications**:  
   The upgrade does not alter the opcode set, gas accounting, or transaction validation logic outside what is defined in EIP-1559 and EIP-3198.
