--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -13,7 +13,7 @@ license: CC0-1.0
 
 ### Simple Summary
 
-Redirect the `BASEFEE` introduced by ECIP-1111 (EIP-1559) to a protocol-defined on-chain treasury contract—**the Olympia Treasury**—instead of burning it. This creates a sustainable, non-inflationary funding stream for Ethereum Classic by capturing transaction fee revenue at the consensus layer. The treasury is immutable, transparent, and operates without trusted intermediaries, enabling decentralized support for client development, infrastructure, and long-term ecosystem security.
+Redirect the `BASEFEE` introduced by ECIP-1111 (EIP-1559) to a protocol-defined on-chain treasury contract—**the Olympia Treasury**—instead of burning it. This mechanism establishes a sustainable, non-inflationary funding stream secured at the consensus layer. The treasury contract is immutable, transparent, and governance-isolated, enabling decentralized allocation of funds for core client development, infrastructure maintenance, and ecosystem resilience.
 
 ### Abstract
 
@@ -21,13 +21,13 @@ This ECIP specifies the deployment of the **Olympia Treasury**, a protocol-level
 
 The Olympia Treasury serves as an immutable, externally auditable funding vault for Ethereum Classic. It accumulates protocol-level fee revenue and is designed to interoperate securely with a permissionless governance layer (ECIP-1113). Disbursements are executed exclusively through on-chain proposals approved by Olympia DAO.
 
-This treasury mechanism introduces a transparent, non-inflationary funding model to support client maintenance, protocol development, infrastructure, and ecosystem growth—without reliance on trusted intermediaries. The design draws on successful precedents from other EVM-compatible networks, including Ronin, Celo, and Mantle, which similarly redirect basefee revenue into DAO-governed treasuries.
+This treasury mechanism introduces a transparent, non-inflationary funding model to support client maintenance, protocol development, infrastructure, and ecosystem growth—without reliance on trusted intermediaries. This architecture draws on successful precedents from EVM-compatible networks such as Ronin, Celo, and Mantle, which redirect `BASEFEE` or sequencer revenue into DAO-governed treasuries to fund public goods.
 
 ### Motivation
 
 Ethereum Classic currently lacks a sustainable, transparent, and decentralized mechanism to fund core protocol development, infrastructure, and ecosystem tooling. Historical support has relied on nonprofit foundations, one-time grants, or centralized donors—many of which have discontinued operations or withdrawn funding.
 
-With block rewards declining over time under ECIP-1017, Ethereum Classic must transition to a funding model that is both durable and consistent with its core values of immutability and Proof-of-Work.
+With block rewards declining over time under ECIP-1017, Ethereum Classic requires a funding model that preserves its fixed monetary policy while aligning with its core principles of immutability, decentralization, and Proof-of-Work security.
 
 Redirecting the `BASEFEE` introduced by EIP-1559 into a protocol-owned treasury—rather than burning it—establishes a native, non-inflationary funding stream tied directly to network usage. This model:
 
@@ -47,6 +47,7 @@ The Olympia Treasury contract SHALL be deployed at a fixed, deterministic addres
   _(Final address to be derived via `CREATE` or `CREATE2` and published prior to testnet deployment in coordination with client implementers.)_
 
 The address derivation MUST be reproducible across all client implementations to ensure deterministic deployment and cross-client consensus integrity.
+The address derivation MUST use a deterministic method (e.g., `CREATE2`) and be reproducible across all client implementations. The final address SHALL be published in coordination with Core-Geth.
 
 #### Fee Redirection and Consensus Enforcement
 
@@ -58,7 +59,7 @@ The address derivation MUST be reproducible across all client implementations to
 The Olympia Treasury contract MUST meet the following technical constraints:
 
 - **Immutability**:  
-  - No proxy pattern, upgrade hooks, `selfdestruct`, or `delegatecall`.
+  - The contract SHALL include no proxy pattern, upgrade hooks, `selfdestruct`, `delegatecall`, or any opcode enabling runtime modification. Deployment MUST be single-step and final.
   - No admin or owner-controlled logic.
 - **Traceability**:  
   - Emits `Transfer`, `Receive`, and `ProposalExecuted` events for auditability.
@@ -75,7 +76,7 @@ The Treasury contract SHALL expose a restricted interface callable only by a des
 - On-chain event logging for every executed proposal.
 - Stateless logic enabling milestone-based or time-locked funding (controlled by external governance, not the Treasury itself).
 
-> No governance logic (e.g., proposals, voting) SHALL exist within the Treasury contract. All governance functions SHALL reside externally to ensure modularity and minimize attack surface.
+> Governance logic SHALL be implemented externally. The Treasury contract SHALL enforce execution-only behavior and MUST NOT include proposal submission, vote tallying, or authorization mechanisms. This separation minimizes attack surface and supports modular DAO upgrades.
 
 #### Execution Control and Spam Mitigation
 
@@ -113,7 +114,7 @@ The Treasury contract is a cornerstone of Ethereum Classic’s transition to sus
   Unlike closed foundations or opaque grant programs, the Treasury enables **any contributor** to submit a proposal through transparent, on-chain governance (ECIP-1113).
 
 - **Transparency and Accountability**  
-  All inflows and disbursements are recorded on-chain. This removes ambiguity, deters favoritism, and builds long-term community trust in treasury stewardship.
+  All inflows and disbursements are recorded on-chain through event emissions. This guarantees verifiability of treasury activity, deters favoritism, and builds long-term trust in the transparency and neutrality of protocol funding.
 
 - **Governance Modularity**  
   Governance logic resides outside the Treasury contract. This allows upgrades or replacements of the DAO (ECIP-1113) without modifying the Treasury, improving resilience and long-term flexibility.
@@ -158,7 +159,7 @@ The Olympia Treasury design builds on proven patterns from other EVM-compatible 
   [Polygon CDK Overview](https://polygon.technology/blog/polygon-cdk-announces-native-support-for-eip-4844-and-modular-daos)
 
 - **OP Stack (used by Base, Optimism)**  
-  Supports EIP-1559-style transactions and sequencer revenue splitting. However, `BASEFEE` is not currently redirected to a DAO treasury — providing a useful counterexample and design contrast.
+  The OP Stack supports EIP-1559-style transactions and sequencer revenue splitting, but does not redirect `BASEFEE` to a DAO treasury. This provides a useful counterexample for evaluating the neutrality and sustainability of treasury design decisions across rollup architectures.
 
 These implementations reflect a broader trend: **redirecting protocol revenue to transparent, on-chain treasuries is an effective, neutral, and incentive-aligned strategy** for funding ecosystem development without introducing inflation or centralized control.
 
