--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -13,13 +13,13 @@ license: CC0-1.0
 
 ### Simple Summary
 
-This ECIP defines the on-chain governance framework for Olympia DAO, a decentralized smart contract system that governs the disbursement of funds from the Olympia Treasury (as defined in ECIP-1112). The DAO supports permissionless proposal submission, token-weighted voting, and time-locked execution of approved proposals. Its purpose is to ensure that Ethereum Classic’s protocol-level funding is allocated transparently and in alignment with the network’s principles of decentralization, neutrality, and sustainability.
+This ECIP defines the on-chain governance framework for Olympia DAO, a decentralized smart contract system that governs fund disbursement from the Olympia Treasury (ECIP-1112). Olympia DAO enables transparent, permissionless proposal submission, token-based voting, and time-locked execution. It ensures protocol-level funding is allocated in alignment with Ethereum Classic’s principles of decentralization, neutrality, and sustainability.
 
 **No governance token exists at launch. Any token issuance, supply, or distribution must be proposed and approved transparently through on-chain governance.**
 
 ### Abstract
 
-This ECIP specifies the architecture and operational framework of Olympia DAO — a decentralized autonomous organization responsible for governing the Olympia Treasury (as defined in ECIP-1112). The DAO facilitates permissionless proposal submission, token-based community voting, and time-locked execution of approved disbursements.
+This ECIP specifies the architecture of Olympia DAO—a decentralized governance system for managing the Olympia Treasury (ECIP-1112). It facilitates permissionless proposal submission, token-based voting, and time-locked execution of approved disbursements.
 
 Olympia DAO is implemented as a modular smart contract system comprising governance logic, voting mechanisms, and authorized interfaces to the Treasury contract. It operates without centralized control and enables open participation by ETC stakeholders through on-chain processes.
 
@@ -39,7 +39,7 @@ Olympia DAO is designed to:
 
 This transition from discretionary, off-chain funding to rule-based, on-chain governance strengthens ETC’s commitment to sovereignty, neutrality, and decentralization.
 
-Comparable architectures have been adopted by EVM-compatible networks such as Ronin, Celo, and Mantle, where protocol-level fee revenue is governed by DAOs. Olympia DAO adapts this model to Ethereum Classic, aligning sustainable development funding with Proof-of-Work consensus and monetary immutability.
+Olympia DAO adapts DAO-based governance of protocol-level revenue, as seen in EVM-compatible networks like Ronin, Celo, and Mantle, to Ethereum Classic’s Proof-of-Work architecture. It provides a non-inflationary, decentralized framework for managing development funds while preserving monetary immutability.
 
 ### Specification
 
@@ -57,8 +57,7 @@ The DAO MUST implement the following core components:
   - Disbursement schedule (e.g., milestones, vesting, or single transfer)
 
 - **Voting Mechanism**:  
-  All proposals SHALL be subject to an on-chain vote. The initial implementation MAY support token-weighted, reputation-based, or hybrid voting models (e.g., staked ETC, veOLY, or quadratic schemes).  
-  No governance token SHALL exist at launch. Any token design, supply, or distribution MUST be proposed and ratified through DAO governance, with no premine or privileged allocations.
+  All proposals SHALL undergo an on-chain vote. The initial implementation MAY support stake-based or hybrid voting models (e.g., staked ETC, veOLY, or quadratic schemes). No governance token SHALL exist at launch. Any token issuance MUST be proposed through the DAO and ratified via on-chain vote, with no premine or privileged allocation.
 
 - **Quorum and Approval Thresholds**:
   - A minimum quorum MUST be enforced to validate a proposal.
@@ -152,14 +151,12 @@ The Olympia DAO replaces this model with a permissionless, on-chain mechanism go
 
 #### Plutocracy Risk and Voting Design
 
-Token-weighted voting systems face criticism for enabling large holders (“whales”) to dominate outcomes. Olympia DAO mitigates this risk through:
+Token-weighted voting systems face criticism for enabling large holders (“whales”) to dominate outcomes. Olympia DAO mitigates plutocracy risk through a modular voting architecture. While the initial system MAY use stake-based or delegated voting, the DAO framework supports migration to inclusive models, such as:
 
-- **Modular Voting Architecture**:  
-  The initial system MAY use stake-based or delegated voting. However, the DAO supports migration to alternative models, including:
-  - Soulbound reputation tokens
-  - Quadratic voting
-  - Proof-of-Contribution attestations
-  - Elected councils
+- Soulbound reputation tokens
+- Quadratic voting
+- Proof-of-Contribution attestations
+- Elected governance councils
 
 - **No Premine or Predefined Token**:  
   No governance token exists at launch. Any token design or distribution MUST be proposed and approved via DAO vote.
@@ -400,7 +397,7 @@ To preserve decentralization and mitigate governance capture risks, the Olympia 
   Votes must meet predefined quorum and approval thresholds to pass, reducing the influence of minority coalitions.
 
 - **Vote Delegation Mechanisms**:  
-  Token holders may delegate voting rights to trusted representatives. This improves participation and lowers the barrier for non-technical users.
+  Token holders MAY delegate their voting power to trusted representatives via on-chain delegation. This enables broader participation and lowers barriers for non-technical or passive stakeholders.
 
 - **Modular Voting Systems**:  
   The DAO framework supports future integration of inclusive voting models, such as:
